# MDInsight

./: README.md  pyproject.toml  sample_report.html
mdinsight/: __init__.py  cli.py  engine.py
mdinsight/ai/: anomaly.py  clustering.py  feature_importance.py  transitions.py
mdinsight/analysis/: dynamics.py  energy.py  fingerprints.py  interactions.py
mdinsight/core/: system.py  trajectory.py
mdinsight/reports/: html_report.py
mdinsight/visualization/: dashboard.py  networks.py  temporal.py
