[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdinsight"
version = "0.1.0"
description = "AI-Powered Deep Dive Analysis for Molecular Dynamics Simulations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Pritam Kumar Panda"},
]
keywords = [
    "molecular-dynamics", "protein-ligand", "drug-discovery",
    "computational-biology", "bioinformatics", "machine-learning",
    "visualization", "GROMACS", "MDAnalysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "MDAnalysis>=2.4.0",
    "numpy>=1.22",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "plotly>=5.15",
    "networkx>=3.0",
]

[project.optional-dependencies]
full = [
    "hdbscan>=0.8.33",
    "umap-learn>=0.5",
    "nglview>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
mdinsight = "mdinsight.cli:main"

[project.urls]
Homepage = "https://github.com/pritampanda15/MDInsight"
Repository = "https://github.com/pritampanda15/MDInsight"

[tool.setuptools.packages.find]
include = ["mdinsight*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
